# Udemy

./: .gitignore
AI Engineer Bootcamp/02. Python/03. Data Types/: Python+Variables+and+Types+of+Data_Lectures.ipynb  Python+Variables+and+Types+of+Data_Solutions.ipynb
AI Engineer Bootcamp/03. NLP/nlp_course/: pyproject.toml  requirements.txt
AI Engineer Bootcamp/03. NLP/nlp_course/notebooks/: 2.2 Lowercase.ipynb  2.3 Stopwords.ipynb  2.4 Regular Expressions.ipynb  2.6 Stemming.ipynb  2.8 N-grams.ipynb  2.9 Practical.ipynb  3.3+NER+new.ipynb  3.4 Practical.ipynb  4.2 Rule Based Sentiment.ipynb  4.3 Pre-trained transormer models.ipynb  4.4 Practical Task.ipynb  5.2 Bag of Words.ipynb  8 Practical.ipynb  hello.ipynb
AI Engineer Bootcamp/03. NLP/nlp_course/src/: main.py
AI Engineer Bootcamp/04. LLM/llm_course/: README.md  pyproject.toml
AI Engineer Bootcamp/05. LangChain/langchain_course/: pyproject.toml
AI Engineer Bootcamp/Python/: List-Comprehensions-and-Lambda-Functions-Exercises.ipynb  List-Comprehensions-and-Lambda-Functions-Solutions.ipynb
NadoCoding/: 01.LangChain.ipynb  05.MemoryManagement.ipynb  12.SaveChromaDB.ipynb  13.LoadChromaDB.ipynb  15.LoadFaissDB.ipynb  pyproject.toml
NadoCoding/notebooks/: 01.LangChain.ipynb  07.DocumentLoader.ipynb  08.TextSplitter.ipynb  09.OpenAIEmbeddings.ipynb  10.HuggingFaceEmbeddings.ipynb  14.SaveFaissDB.ipynb  16.Retriever.ipynb  19.Quiz.ipynb
NadoCoding/src/: main.py
NanoCoding/: 02.PromptTemplate.ipynb  03.OutputParser.ipynb  04.Memory.ipynb  11.VectorStore.ipynb  17.MultiQueryRetriever.ipynb  18.RAG.ipynb
(+14 files in other folders)
