[project]
name = "03-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gensim==4.3.3",
    "ipywidgets==8.1.5",
    "matplotlib==3.10.0",
    "nltk==3.9.1",
    "pandas==2.2.3",
    "scikit-learn==1.6.0",
    "seaborn==0.13.2",
    "spacy==3.8.3",
    "textblob==0.18.0.post0",
    "torch==2.5.1",
    "transformers==4.47.1",
    "vadersentiment==3.3.2",
]
