[project]
name = "llm-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.2.1",
    "clean-text==0.6.0",
    "config==0.5.1",
    "datasets==3.2.0",
    "evaluate==0.4.3",
    "faiss-cpu==1.7.4",
    "ipywidgets==8.1.5",
    "langchain==0.0.297",
    "matplotlib==3.10.0",
    "openai==0.28",
    "pandas==2.0.0",
    "pydantic==1.10.9",
    "scikit-learn==1.6.0",
    "seaborn==0.13.2",
    "sentencepiece==0.2.0",
    "tiktoken==0.5.1",
    "torch==2.5.1",
    "transformers==4.47.1",
]
